// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notebook /> spec Renders the empty component 1`] = `
<div
  class="euiPage euiPage--paddingMedium euiPage--grow"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <h3
          class="euiTitle euiTitle--large"
          data-test-subj="notebookTitle"
        >
          sample-notebook-1
        </h3>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButtonIcon euiButtonIcon--danger euiButtonIcon--small"
                    data-test-subj="notebook-delete-icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--small"
                    data-test-subj="notebook-edit-icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--small"
                    data-test-subj="notebook-duplicate-icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div>
                <div
                  class="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small"
                      data-test-subj="reporting-actions-button"
                      id="reportingActionsButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButton__text"
                        >
                          Reporting
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
      </div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <p>
            Created on 12/14/2023 06:49 PM
          </p>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      />
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Delete all paragraphs
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Clear all outputs
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Run all paragraphs
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiPopover euiPopover--anchorDownCenter"
            >
              <div
                class="euiPopover__anchor"
              >
                <button
                  class="euiButton euiButton--primary euiButton--small euiButton--fill"
                  data-test-subj="notebook-paragraph-actions-button"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text"
                    >
                      Add paragraph
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
      >
        <div
          class="euiSpacer euiSpacer--xxl"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextAlign euiTextAlign--center"
          >
            <h2>
              No paragraphs
            </h2>
            <div
              class="euiText euiText--small"
            >
              Add a paragraph to compose your document or story. Notebooks now support two types of input:
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--xl"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceEvenly euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrow2"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrow3"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasIcon"
            >
              <div
                class="euiCard__top"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--xxLarge euiIcon-isLoading euiCard__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </div>
              <div
                class="euiCard__content"
              >
                <span
                  class="euiTitle euiTitle--small euiCard__title"
                  id="random_html_idTitle"
                >
                  Code block
                </span>
                <div
                  class="euiText euiText--small euiCard__description"
                  id="random_html_idDescription"
                >
                  <p>
                    Write contents directly using markdown, SQL or PPL.
                  </p>
                </div>
              </div>
              <div
                class="euiCard__footer"
              >
                <button
                  class="euiButton euiButton--primary euiButton--small"
                  data-test-subj="emptyNotebookAddCodeBlockBtn"
                  style="margin-bottom: 17px;"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Add code block
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrow3"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasIcon"
            >
              <div
                class="euiCard__top"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--xxLarge euiIcon-isLoading euiCard__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </div>
              <div
                class="euiCard__content"
              >
                <span
                  class="euiTitle euiTitle--small euiCard__title"
                  id="random_html_idTitle"
                >
                  Visualization
                </span>
                <div
                  class="euiText euiText--small euiCard__description"
                  id="random_html_idDescription"
                >
                  <p>
                    Import OpenSearch Dashboards or Observability visualizations to the notes.
                  </p>
                </div>
              </div>
              <div
                class="euiCard__footer"
              >
                <button
                  class="euiButton euiButton--primary euiButton--small"
                  style="margin-bottom: 17px;"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Add visualization
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrow2"
          />
        </div>
        <div
          class="euiSpacer euiSpacer--xxl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Notebook /> spec Renders the visualization component 1`] = `
<div
  class="euiPage euiPage--paddingMedium euiPage--grow"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <h3
          class="euiTitle euiTitle--large"
          data-test-subj="notebookTitle"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButtonIcon euiButtonIcon--danger euiButtonIcon--small"
                    data-test-subj="notebook-delete-icon"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2Zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2ZM6 3h4V1H6v2Z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  class="euiButton euiButton--primary euiButton--small euiButton--fill"
                  data-test-subj="upgrade-notebook-callout"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Upgrade Notebook
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <p>
            Created on Invalid date
          </p>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        class="euiCallOut euiCallOut--primary"
      >
        <div
          class="euiText euiText--small"
        >
          <div
            class="euiTextColor euiTextColor--default"
          >
            Upgrade this notebook to take full advantage of the latest features
            <div
              class="euiSpacer euiSpacer--s"
            />
            <button
              class="euiButton euiButton--primary euiButton--small"
              data-test-subj="upgrade-notebook"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Upgrade Notebook
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      />
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        />
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
      >
        <div
          class="euiSpacer euiSpacer--xxl"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextAlign euiTextAlign--center"
          >
            <h2>
              No paragraphs
            </h2>
            <div
              class="euiText euiText--small"
            >
              Add a paragraph to compose your document or story. Notebooks now support two types of input:
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--xl"
        />
        <div
          class="euiSpacer euiSpacer--xxl"
        />
      </div>
    </div>
  </div>
</div>
`;
